[gd_scene load_steps=6 format=3 uid="uid://bf3b0i8scthbm"]

[ext_resource type="Script" path="res://Source/Main.gd" id="1_uvcat"]
[ext_resource type="Texture2D" uid="uid://bnkl8rujlgv0h" path="res://Source/Checker.png" id="1_wvj2f"]
[ext_resource type="Script" path="res://Source/PreviewDialog.gd" id="3_bojkk"]

[sub_resource type="StyleBoxFlat" id="5"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0, 0, 0, 0.25098)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kjgn5"]
texture = ExtResource("1_wvj2f")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Main" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_uvcat")

[node name="MarginContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("5")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Alpha Threshold"
horizontal_alignment = 1

[node name="Threshold" type="SpinBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.005
value = 0.9

[node name="Reload" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Reload"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Columns"
horizontal_alignment = 1

[node name="Columns" type="SpinBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
value = 1.0
editable = false

[node name="Grid" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Auto"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Horizontal Margin"
horizontal_alignment = 1

[node name="MarginH" type="SpinBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
value = 1.0
suffix = "px"

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Vertical Margin"
horizontal_alignment = 1

[node name="MarginV" type="SpinBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 128.0
value = 1.0
suffix = "px"

[node name="Stash" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Image Stash"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Recenter View"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Preview"

[node name="DisplayGrid" type="CheckBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Show Grid"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CustomName" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Image Name"

[node name="SavePNG" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Save PNG"

[node name="Status" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Drop folder or image files here to start.

Images should be of the same size. If their sizes don't match, the generator will try to use the dominating size.

The images will be automatically cropped based on the Alpha Threshold value. Greater value means more exact crop.

Supported formats: %s

If you drop a single image, the generator will instead edit it as spritesheet."
horizontal_alignment = 1
vertical_alignment = 1

[node name="View" type="CanvasLayer" parent="."]
layer = -1

[node name="CenterContainer" type="CenterContainer" parent="View"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Background" type="ColorRect" parent="View/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
color = Color(0, 0.501961, 0.501961, 1)

[node name="GridContainer" type="GridContainer" parent="View/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3

[node name="VBoxContainer" type="GridContainer" parent="View"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
columns = 3

[node name="Label" type="Label" parent="View/VBoxContainer"]
layout_mode = 2
text = "LMB"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="View/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="View/VBoxContainer"]
layout_mode = 2
text = "rearrange images"

[node name="Label3" type="Label" parent="View/VBoxContainer"]
layout_mode = 2
text = "RMB"
horizontal_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="View/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="View/VBoxContainer"]
layout_mode = 2
text = "delete images"

[node name="Label5" type="Label" parent="View/VBoxContainer"]
layout_mode = 2
text = "MMB"
horizontal_alignment = 1

[node name="VSeparator3" type="VSeparator" parent="View/VBoxContainer"]
layout_mode = 2

[node name="Label6" type="Label" parent="View/VBoxContainer"]
layout_mode = 2
text = "pan view"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Error" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
modulate = Color(1, 0, 0, 1)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -14.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 0
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="CanvasLayer"]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[node name="SplitDialog" type="ConfirmationDialog" parent="."]
title = "Edit Spritesheet"
position = Vector2i(0, 36)
size = Vector2i(272, 343)

[node name="VBoxContainer" type="VBoxContainer" parent="SplitDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 264.0
offset_bottom = 294.0

[node name="Label" type="Label" parent="SplitDialog/VBoxContainer"]
layout_mode = 2
text = "Split Frames"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SplitDialog/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SplitX" type="SpinBox" parent="SplitDialog/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 1000.0
value = 1.0
select_all_on_focus = true

[node name="Label" type="Label" parent="SplitDialog/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "x"

[node name="SplitY" type="SpinBox" parent="SplitDialog/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 1000.0
value = 1.0
select_all_on_focus = true

[node name="CenterContainer" type="CenterContainer" parent="SplitDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="SplitDialog/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_kjgn5")

[node name="SplitPreview" type="TextureRect" parent="SplitDialog/VBoxContainer/CenterContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="StashDialog" type="AcceptDialog" parent="."]
title = "Image Stash"
position = Vector2i(0, 500)
size = Vector2i(309, 100)

[node name="VBoxContainer" type="VBoxContainer" parent="StashDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 301.0
offset_bottom = 51.0

[node name="Label" type="Label" parent="StashDialog/VBoxContainer"]
layout_mode = 2
text = "Click frame to re-add it to spritesheet."
horizontal_alignment = 1

[node name="StashImages" type="HFlowContainer" parent="StashDialog/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PreviewDialog" type="AcceptDialog" parent="."]
position = Vector2i(0, 36)
size = Vector2i(300, 300)
script = ExtResource("3_bojkk")

[node name="VBoxContainer" type="VBoxContainer" parent="PreviewDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 292.0
offset_bottom = 251.0

[node name="CenterContainer" type="CenterContainer" parent="PreviewDialog/VBoxContainer"]
layout_mode = 2

[node name="PreviewTexture" type="TextureRect" parent="PreviewDialog/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ReferenceRect" type="ReferenceRect" parent="PreviewDialog/VBoxContainer/CenterContainer/PreviewTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
editor_only = false

[node name="HBoxContainer" type="HBoxContainer" parent="PreviewDialog/VBoxContainer"]
layout_mode = 2

[node name="FrameValue" type="HSlider" parent="PreviewDialog/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tick_count = 23

[node name="FrameLabel" type="Label" parent="PreviewDialog/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "999"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PreviewDialog/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="PreviewDialog/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "FPS"

[node name="FPS" type="SpinBox" parent="PreviewDialog/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
value = 60.0

[node name="Loop" type="CheckBox" parent="PreviewDialog/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Loop"

[node name="Button" type="Button" parent="PreviewDialog/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Play/Pause"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Reload" to="." method="load_images"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Columns" to="." method="columns_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Grid" to="." method="toggle_auto"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MarginH" to="." method="hmargin_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MarginV" to="." method="vmargin_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Stash" to="StashDialog" method="popup_centered_ratio" binds= [0.5]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="recenter"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button2" to="PreviewDialog" method="appear"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/DisplayGrid" to="." method="toggle_grid"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/CustomName" to="." method="update_save_button" unbinds=1]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SavePNG" to="." method="save_png"]
[connection signal="hidden" from="CanvasLayer/Error" to="." method="error_hidden"]
[connection signal="timeout" from="CanvasLayer/Timer" to="CanvasLayer/Error" method="hide"]
[connection signal="canceled" from="SplitDialog" to="." method="split_spritesheet"]
[connection signal="confirmed" from="SplitDialog" to="." method="split_spritesheet"]
[connection signal="value_changed" from="SplitDialog/VBoxContainer/HBoxContainer/SplitX" to="." method="update_split_preview" unbinds=1]
[connection signal="value_changed" from="SplitDialog/VBoxContainer/HBoxContainer/SplitY" to="." method="update_split_preview" unbinds=1]
[connection signal="draw" from="SplitDialog/VBoxContainer/CenterContainer/PanelContainer/SplitPreview" to="." method="draw_split_preview"]
[connection signal="value_changed" from="PreviewDialog/VBoxContainer/HBoxContainer/FrameValue" to="PreviewDialog" method="update_frame"]
[connection signal="value_changed" from="PreviewDialog/VBoxContainer/HBoxContainer2/FPS" to="PreviewDialog" method="update_fps"]
[connection signal="pressed" from="PreviewDialog/VBoxContainer/Button" to="PreviewDialog" method="play"]
